# MlOps_Taller2

./: README.md  docker-compose.yml
Jupyter/: Dockerfile  crea_modelos.py  limpieza.py  pyproject.toml
Jupyter/notebooks/.ipynb_checkpoints/: crea_modelos-checkpoint.py  limpieza-checkpoint.py
api/: Dockerfile  main.py  pyproject.toml
