    [project]
name = "jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jupyterlab>=4.4.6",
    "numpy>=2.3.2",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
]
